--- a/vcweb/core/templates/participant-index.html
+++ b/vcweb/core/templates/participant-index.html
@@ -17,12 +17,12 @@ Virtual Commons Web Participant Interface
     {% for experiment in experiments %}
     <div class='ui-state-highlight ui-corner-all'>
         <a href='{{ experiment.participant_url }}'>
-            <span class='ui-icon {{experiment_status|lower}}'></span> 
+            <span class='icon-left ui-icon {{experiment_status|lower}}'></span> 
             {{ experiment.status_line }}, created {{experiment.date_created|date:"SHORT_DATETIME_FORMAT"}}
         </a>
     </div>
     {% empty %}
-    <div class='ui-state-error ui-corner-all'><span class='ui-icon ui-icon-alert'></span>No <b>{{ experiment_status|lower }}</b> experiments</div>
+    <div class='ui-state-error ui-corner-all'><span class='icon-left ui-icon ui-icon-alert'></span>No <b>{{ experiment_status|lower }}</b> experiments</div>
     {% endfor %}
     {% endfor %}
 </div>
