adding first cut at goto url support

--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -26,10 +26,10 @@
         {% endblock %}
     </head>
     <body>
-        <div style='float:left; padding-top: 5px;'>
-            <img src='/static/images/vcweb-logo.png' alt='vcweb logo'/>
-        </div>
         <div id='logo'>
+            <div style='clear: none; position:relative;float:right; left:-930px; padding: 5px;'>
+                <img src='/static/images/vcweb-logo.png' alt='vcweb logo'/>
+            </div>
             <h1>
                 {% block logo %}
                 virtual commons web environment
