--- a/vcweb/core/templates/includes/experimenter.events.html
+++ b/vcweb/core/templates/includes/experimenter.events.html
@@ -3,6 +3,17 @@
 function createRefreshEvent() {
     return createMessageEvent("Refresh all clients", "refresh");
 }
+function createGotoEvent(url) {
+    if (! url) {
+        url = "participate";
+    }
+    return {
+        'type': 'goto',
+        'experimenter_id': {{ request.user.experimenter.pk }},
+        'experiment_id': {{ experiment.pk }},
+        'url': url
+    };
+}
 function createConnectionEvent() {
    return createMessageEvent("Initial connection", "connect");
 }
