--- a/vcweb/forestry/templates/forestry/participate.html
+++ b/vcweb/forestry/templates/forestry/participate.html
@@ -1,6 +1,8 @@
 {% extends "base-participant.html" %}
 {% block head %}
 {{ block.super }}
+{% include "includes/participant.events.html" %}
+{% include "includes/socket.io.html" %}
 <script type="text/javascript">
     $(function() {
         $("#forestryForm").validate({
@@ -21,6 +23,16 @@
             this.select();
         });
         $('#harvestDecisionId').focus();
+        var s = connect(window.location.hostname, 8888, 'participant/{{participant_group_relationship.pk}}');
+        s.on('message', function(json_string) {
+            var json = jQuery.parseJSON(json_string);
+            switch (json.message_type) {
+            case 'goto':
+                console.log("going to " + json.url);
+                window.location.href = json.url;
+                break;
+            }
+        });
     });
 </script>
 {% endblock %}
