switching tornadio server to use participant_experiment_relationships instead of group relationships which may not be fully formed yet (depending on the experiment as well).  adding new tree image and showing all trees in the resource.

--- a/vcweb/core/templates/includes/participant.events.html
+++ b/vcweb/core/templates/includes/participant.events.html
@@ -1,24 +1,24 @@
 <script type="text/javascript">
-
 function createConnectionEvent() {
    return createMessageEvent("Initial connection", "connect");
 }
-
 function createReconnectionEvent() {
    return createMessageEvent("Reconnecting from disconnect", "reconnect");
 }
-
 function createMessageEvent(payload, event_type) {
    if (! event_type) {
       event_type = "chat";
    }
    return {
       "type": event_type,
+{% if participant_group_relationship %}
       "participant_group_relationship_id": {{participant_group_relationship.pk}},
+{% else %}
+      "participant_experiment_relationship_id": {{participant_experiment_relationship.pk}},
+{% endif %}
       "message": payload
    };
 }
-
 function createChatEvent(message) {
    return createMessageEvent(message);
 }
