--- a/vcweb/forestry/templates/forestry/chat.html
+++ b/vcweb/forestry/templates/forestry/chat.html
@@ -6,7 +6,7 @@
     <script type="text/javascript">
         $(function() {
                 var chatDiv = document.getElementById('chat-div');
-                var s = connect(window.location.hostname, 8888, 'participant/{{participant_group_relationship.pk}}');
+                var s = connect(window.location.hostname, 8888, 'participant/{{participant_experiment_relationship.pk}}');
                 s.on('message', function(json_string) {
                     var json = jQuery.parseJSON(json_string);
                     switch (json.message_type) {
@@ -17,6 +17,9 @@
                         break;
                     case 'refresh':
                         location.reload(true);
+                        break;
+                    case 'goto':
+                        location.href = json.url;
                         break;
                     }
                 });
@@ -43,7 +46,7 @@ Forestry Chat Round
     <div class='info ui-corner-all'>
         <span class='icon-left ui-icon ui-icon-info'></span>
         <b>
-            Welcome back {{participant.get_full_name}}. 
+            Hello, {{participant.get_full_name}}.
             You are participant {{ participant_group_relationship.participant_number }} in {{participant_group_relationship.group}}.
         </b>
     </div>
