--- a/vcweb/forestry/templates/forestry/participate.html
+++ b/vcweb/forestry/templates/forestry/participate.html
@@ -42,7 +42,7 @@ Participating in {{experiment.status_line}}
 {% block content %}
 <h3>Forestry round number {{ experiment.current_round.round_number }}</h3>
 {% for i in number_of_resource_divs %}
-<div style="background: url('/static/images/forestry/pine-tree.png') repeat-x; width:600px; height: 79px;">
+<div style="background: url('/static/images/forestry/pine-tree.png') repeat-x; width:{{max_width}}px; height: 79px;">
     &nbsp;
 </div>
 {% endfor %}
