adding experimenter check to monitor (all experimenter_required functions should have it actually) and fixed participant_experiment_relationship reference in chat

--- a/vcweb/core/templates/includes/participant.events.html
+++ b/vcweb/core/templates/includes/participant.events.html
@@ -22,4 +22,7 @@ function createMessageEvent(payload, event_type) {
 function createChatEvent(message) {
    return createMessageEvent(message);
 }
+function createSubmitEvent(message) {
+    return createMessageEvent(message, "submit");
+}
 </script>
