--- a/vcweb/forestry/templates/forestry/chat.html
+++ b/vcweb/forestry/templates/forestry/chat.html
@@ -46,7 +46,7 @@ Forestry Chat Round
     <div class='info ui-corner-all'>
         <span class='icon-left ui-icon ui-icon-info'></span>
         <b>
-            Hello, {{participant.get_full_name}}.
+            Hello, {{participant.full_name}}.
             You are participant {{ participant_group_relationship.participant_number }} in {{participant_group_relationship.group}}.
         </b>
     </div>
