--- a/vcweb/forestry/templates/forestry/includes/harvest-table.html
+++ b/vcweb/forestry/templates/forestry/includes/harvest-table.html
@@ -3,7 +3,7 @@
 <h3>Maximum harvest table</h3>
 <table>
 	<thead>
-	<tr><th>Current resource level</th><th>Maximum individual harvest level</th></tr>
+	<tr><th>Resource level</th><th>Maximum individual harvest</th></tr>
 	</thead>
 	<tbody>
 	<tr class='harvest-5'><td>25-100</td><td>5</td></tr>
