fixing broken socket_io participant data, pushing socket connection into participant.events.html since pretty much every participant page requires a socket.io connection (excepting the participant dashboard currently)

--- a/vcweb/core/templates/base-participant.html
+++ b/vcweb/core/templates/base-participant.html
@@ -3,6 +3,11 @@
 {% block head %}
     {{block.super}}
     <script type='text/javascript' src='/static/js/jquery.validate.min.js'></script>
+    {% include "includes/participant.events.html" %}
+    {% include "includes/socket.io.html" %}
+    <script type='text/javascript'>
+        connect(window.location.hostname, 8888, 'participant/{{participant_experiment_relationship.pk}}');
+    </script>
 {% endblock %}
 
 {% block title %}
