--- a/vcweb/forestry/templates/forestry/participate.html
+++ b/vcweb/forestry/templates/forestry/participate.html
@@ -1,8 +1,6 @@
 {% extends "base-participant.html" %}
 {% block head %}
 {{ block.super }}
-{% include "includes/participant.events.html" %}
-{% include "includes/socket.io.html" %}
 <script type="text/javascript">
     $(function() {
         $("#forestryForm").validate({
@@ -23,7 +21,7 @@
             this.select();
         });
         $('#harvestDecisionId').focus();
-        var s = connect(window.location.hostname, 8888, 'participant/{{participant_group_relationship.pk}}');
+        var s = getCachedSocket();
         s.on('message', function(json_string) {
             var json = jQuery.parseJSON(json_string);
             switch (json.message_type) {
