--- a/vcweb/forestry/templates/forestry/wait.html
+++ b/vcweb/forestry/templates/forestry/wait.html
@@ -5,7 +5,8 @@
 {% include "includes/socket.io.html" %}
 <script type="text/javascript">
     $(function() {
-        var s = connect(window.location.hostname, 8888, 'participant/{{participant_group_relationship.pk}}');
+        // var s = connect(window.location.hostname, 8888, 'participant/{{participant_experiment_relationship.pk}}');
+        var s = getCachedSocket();
         s.on('message', function(json_string) {
             var json = jQuery.parseJSON(json_string);
             switch (json.message_type) {
