removing socket io from participant dashboard

--- a/vcweb/core/templates/base-participant.html
+++ b/vcweb/core/templates/base-participant.html
@@ -2,12 +2,14 @@
 
 {% block head %}
     {{block.super}}
+    {% block participant_socket_io %}
     <script type='text/javascript' src='/static/js/jquery.validate.min.js'></script>
     {% include "includes/participant.events.html" %}
     {% include "includes/socket.io.html" %}
     <script type='text/javascript'>
         connect(window.location.hostname, 8888, 'participant/{{participant_experiment_relationship.pk}}');
     </script>
+    {% endblock %}
 {% endblock %}
 
 {% block title %}
