--- a/vcweb/core/templates/participant-index.html
+++ b/vcweb/core/templates/participant-index.html
@@ -1,7 +1,10 @@
 {% extends "base-participant.html" %}
 
+{% block participant_socket_io %}
+{% endblock %}
+
 {% block title %}
-Virtual Commons Web Participant Interface
+Virtual Commons Web Participant Dashboard
 {% endblock %}
 
 {% block page %}
